# wsh

./: CMakeLists.txt
cmake/: FindModules.cmake
cmake/Modules/: FindFrozen.cmake
src/: loop.cpp  loop.h  loop.hpp  main.cpp  parser.cpp  parser.h
src/builtin/: Factory.hpp  Foreground.hpp
src/loop/: loop.cpp
